api!: adopted gRPC note and directory api changes
