# src/docs/swagger.yaml
@@ -89,9 +89,12 @@ definitions:
       name:
         example: engineering
         type: string
-      parent_id:
-        example: 0195f8f4-1167-7f89-b5ec-b40a8f08f4cb
-        type: string
+      parent_ids:
+        example:
+        - 0195f8f4-1167-7f89-b5ec-b40a8f08f4cb
+        items:
+          type: string
+        type: array
     required:
     - name
     type: object
@@ -169,6 +172,14 @@ definitions:
     type: object
   controllers.DirectoryReply:
     properties:
+      child_dir_ids:
+        items:
+          type: string
+        type: array
+      child_note_ids:
+        items:
+          type: string
+        type: array
       description:
         type: string
       display_name:
@@ -177,14 +188,16 @@ definitions:
         type: string
       image_url:
         type: string
-      name:
-        type: string
-      parent_id:
-        type: string
+      parent_dir_ids:
+        items:
+          type: string
+        type: array
       relationships:
         items:
           $ref: '#/definitions/controllers.PermissionRelationshipReply'
         type: array
+      slug:
+        type: string
     type: object
   controllers.GetAccessTokenReply:
     properties:
@@ -209,10 +222,23 @@ definitions:
         example: SHARE_PERMISSION_READ
         type: string
     type: object
+  controllers.MinimalDirectory:
+    properties:
+      display_name:
+        type: string
+      id:
+        type: string
+      slug:
+        type: string
+    type: object
   controllers.MinimalNote:
     properties:
       author_id:
         type: string
+      directory_ids:
+        items:
+          type: string
+        type: array
       id:
         type: string
       permissions:
@@ -221,10 +247,23 @@ definitions:
         type: array
       stripped_content:
         type: string
+      tag_ids:
+        items:
+          type: string
+        type: array
       title:
         type: string
       updated_at:
         description: ISO 8601 format
+        type: string
+    type: object
+  controllers.MinimalTag:
+    properties:
+      display_name:
+        type: string
+      id:
+        type: string
+      slug:
         type: string
     type: object
   controllers.NoteReply:
@@ -233,11 +272,19 @@ definitions:
         type: string
       content:
         type: string
+      directory_ids:
+        items:
+          type: string
+        type: array
       id:
         type: string
       permissions:
         items:
           $ref: '#/definitions/controllers.PermissionRelationshipReply'
+        type: array
+      tag_ids:
+        items:
+          type: string
         type: array
       title:
         type: string
@@ -304,6 +351,21 @@ definitions:
       version_index:
         type: integer
     type: object
+  controllers.NotesReply:
+    properties:
+      directories:
+        items:
+          $ref: '#/definitions/controllers.MinimalDirectory'
+        type: array
+      notes:
+        items:
+          $ref: '#/definitions/controllers.MinimalNote'
+        type: array
+      tags:
+        items:
+          $ref: '#/definitions/controllers.MinimalTag'
+        type: array
+    type: object
   controllers.PatchAttachmentMetadataRequest:
     properties:
       content_type:
@@ -332,9 +394,12 @@ definitions:
       name:
         example: engineering
         type: string
-      parent_id:
-        example: 0195f8f4-1167-7f89-b5ec-b40a8f08f4cb
-        type: string
+      parent_ids:
+        example:
+        - 0195f8f4-1167-7f89-b5ec-b40a8f08f4cb
+        items:
+          type: string
+        type: array
     required:
     - id
     type: object
@@ -343,9 +408,21 @@ definitions:
       content:
         example: This is the updated content of my note.
         type: string
+      directory_ids:
+        example:
+        - 0195f8f4-1167-7f89-b5ec-b40a8f08f4cb
+        items:
+          type: string
+        type: array
       id:
         example: 0195f8f4-1167-7f89-b5ec-b40a8f08f4cb
         type: string
+      tag_ids:
+        example:
+        - 0195f8f4-1167-7f89-b5ec-b40a8f08f4cb
+        items:
+          type: string
+        type: array
       title:
         example: Updated Note Title
         type: string
@@ -877,6 +954,18 @@ paths:
         name: id
         required: true
         type: string
+      - description: Include parent directories in the response
+        in: query
+        name: include_parents
+        type: boolean
+      - description: Include child directory IDs in the response
+        in: query
+        name: include_child_dirs
+        type: boolean
+      - description: Include child note IDs in the response
+        in: query
+        name: include_child_notes
+        type: boolean
       produces:
       - application/json
       responses:
@@ -971,7 +1060,7 @@ paths:
         in: query
         name: limit
         type: integer
-      - description: Pagination offset
+      - description: Pagination offset (default 0)
         in: query
         name: offset
         type: integer
@@ -981,9 +1070,7 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/controllers.MinimalNote'
-            type: array
+            $ref: '#/definitions/controllers.NotesReply'
         "400":
           description: Bad Request
           schema:
@@ -1458,9 +1545,7 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/controllers.MinimalNote'
-            type: array
+            $ref: '#/definitions/controllers.NotesReply'
         "400":
           description: Bad Request
           schema:
